Correct z-index on popup and itr

--- a/themes/clouds/css-1.7.8/style.css
+++ b/themes/clouds/css-1.7.8/style.css
@@ -2137,7 +2137,7 @@ a:hover .nameZoom {
 
 /* styles for popup menus */
 .itr {
-	position: relative;
+	position: absolute;
 	line-height: 1.5;
 }
 
