--- a/themes/fab/css-1.7.8/style.css
+++ b/themes/fab/css-1.7.8/style.css
@@ -1562,7 +1562,7 @@ a:hover .nameZoom {
 
 /* styles for popup menus */
 .itr {
-	position: relative;
+	position: absolute;
 	line-height: 1.5;
 }
 
