--- a/themes/minimal/css-1.7.8/style.css
+++ b/themes/minimal/css-1.7.8/style.css
@@ -874,7 +874,7 @@
 
 /* styles for popup menus */
 .itr {
-	position: relative;
+	position: absolute;
 	line-height: 1.5;
 }
 
